# task_tracker_app

./: .gitignore  README.md  app.py  folder_structure.sh  pyproject.toml  view_data.py
core/: config.py  database.py
data/: daily_task_completation.csv  task_tracker.db  task_tracker.sql
features/: auth.py  tasks.py
ui/: app.py
