[tool.poetry]
name = "task_tracker_app"
version = "0.1.0"
description = "An app to track daily tasks and habits"
authors = ["Cristian MB <cristianj3006@gmail.com>"]
packages = [{include = "ui"}]  # Asegúrate de que el nombre coincida con tu código fuente


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
streamlit = "^1.0.0"
altair = "^4.0.1"  # Adjust version as necessary
plotly = "^5.22.0"
matplotlib = "^3.9.1"


[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
